--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "gulp": "^3.8.8",
     "gulp-jshint": "^1.8.4",
-    "jshint-stylish": "^1.0.0"
+    "jshint-stylish": "^1.0.0",
+    "minimist": "^1.1.0"
   }
 }
