--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "GPL3",
   "dependencies": {
+    "JSONPath": "^0.10.0",
     "async": "^0.9.0",
     "clivas": "^0.1.4",
     "download": "^3.0.1",
