--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "repository": {
-    "type" : "git",
-    "url" : "git@github.com:Coornail/tumblr-scraper.git"
+    "type": "git",
+    "url": "git@github.com:Coornail/tumblr-scraper.git"
   },
-  "bin" : { "tumblr-scraper" : "./index.js" },
+  "bin": {
+    "tumblr-scraper": "./index.js"
+  },
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/gulp lint:js"
@@ -22,6 +24,7 @@
     "lodash": "^2.4.1",
     "log-symbols": "^1.0.0",
     "progress": "^1.1.8",
+    "through": "^2.3.6",
     "tumblr.js": "0.0.4",
     "yargs": "^1.3.1"
   },
