--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "^2.4.1",
     "log-symbols": "^1.0.0",
     "progress": "^1.1.8",
+    "sparkly": "^1.0.0",
     "through": "^2.3.6",
     "tumblr.js": "0.0.4",
     "yargs": "^1.3.1"
